# robocup-26

./: .gitignore
controller/: README.md  flake.nix  main.py  pyproject.toml  serialtest.py  util.py
motor-controller-pcb/: fp-info-cache  fp-lib-table  motor-controller-pcb.csv  motor-controller-pcb.kicad_pcb  motor-controller-pcb.kicad_prl  motor-controller-pcb.kicad_pro  motor-controller-pcb.kicad_sch  robocup.bak  robocup.kicad_sym  sym-lib-table  ~motor-controller-pcb.kicad_pcb.lck
motor-controller-pcb/fab/: motor-controller-pcb-B_Cu.gbr  motor-controller-pcb-B_Mask.gbr  motor-controller-pcb-B_Paste.gbr  motor-controller-pcb-B_Silkscreen.gbr  motor-controller-pcb-Edge_Cuts.gbr  motor-controller-pcb-F_Cu.gbr  motor-controller-pcb-F_Mask.gbr  motor-controller-pcb-F_Paste.gbr  motor-controller-pcb-F_Silkscreen.gbr  motor-controller-pcb-NPTH.drl  motor-controller-pcb-PTH.drl  motor-controller-pcb-job.gbrjob  motor-controller-pcb.drl
motor-controller-pcb/robocup-library.pretty/: DRI0044.kicad_mod  DRI044.kicad_mod
nixos/: README.md  configuration.nix  flake.nix  hardware-configuration.nix
pico/: .gitignore  Cargo.toml  flake.nix  main.py  pyproject.toml
pico/.cargo/: config.toml
pico/src/: main.rs  motor.rs
visualiser/: index.html  package.json  pnpm-lock.yaml
visualiser/src/: main.ts
